--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "silviolleite/laravelpwa": "^2.0",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
